2007-09-06 Fixed a bug in the embedding of Type 1 fonts in PDF.
           Now it doesn't crash Preview.app. - JKS

2007-09-06 Refactored image saving code so that all GUI backends can
	   save most image types.  See FILETYPES for a matrix of
	   backends and their supported file types. 
	   Backend canvases should no longer write their own print_figure()
	   method -- instead they should write a print_xxx method for
	   each filetype they can output and add an entry to their
	   class-scoped filetypes dictionary. - MGD

2007-09-05 Fixed Qt version reporting in setupext.py - DSD

2007-09-04 Embedding Type 1 fonts in PDF, and thus usetex support
           via dviread, sort of works. To test, enable it by 
           renaming _draw_tex to draw_tex. - JKS

2007-09-03 Added ability of errorbar show limits via caret or
           arrowhead ends on the bars; patch by Manual Metz. - EF

2007-09-03 Created type1font.py, added features to AFM and FT2Font
           (see API_CHANGES), started work on embedding Type 1 fonts
           in pdf files. - JKS

2007-09-02 Continued work on dviread.py. - JKS

2007-08-16 Added a set_extent method to AxesImage, allow data extent
           to be modified after initial call to imshow - DSD

2007-08-14 Fixed a bug in pyqt4 subplots-adjust. Thanks to
           Xavier Gnata for the report and suggested fix - DSD

2007-08-13 Use pickle to cache entire fontManager; change to using
            font_manager module-level function findfont wrapper for
            the fontManager.findfont method - EF

2007-08-11 Numpification and cleanup of mlab.py and some examples - EF

2007-08-06 Removed mathtext2

2007-07-31 Refactoring of distutils scripts.
           - Will not fail on the entire build if an optional Python
             package (e.g. Tkinter) is installed but its development
             headers are not (e.g. tk-devel).  Instead, it will
             continue to build all other extensions.